# opportunity-bug-template

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  fly.toml  pyproject.toml
.github/workflows/: schedule.yml
data/: sources.example.yaml
fly-flaresolverr/: fly.toml
migrations/: 002_add_ratings_preferences.sql
scripts/: setup_schema.sql
src/opportunity_radar/: __init__.py  config.py  db.py  main.py  pipeline_async.py
src/opportunity_radar/digest/: __init__.py  generator.py  sender.py
src/opportunity_radar/llm/: __init__.py  batch.py  pipeline.py  prompts.py
src/opportunity_radar/sources/: __init__.py  browser.py  email.py  page.py
src/opportunity_radar/web/: __init__.py  app.py  auth.py  learning.py
src/opportunity_radar/web/routes/: __init__.py  api.py  pages.py
src/opportunity_radar/web/static/css/: app.css
src/opportunity_radar/web/templates/: base.html
src/opportunity_radar/web/templates/pages/: dashboard.html  history.html  login.html  opportunities.html  preferences.html  rate.html
